<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ProblemasPrincipalesActivity2"
    android:id="@+id/menuPrincipal"
    >
    
    <Button
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:text="@string/prob1Menu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/prob3Menu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/prob2Menu"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:id="@+id/prob1Menu"
        android:background="@drawable/bg_round"
        />

    <Button
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:text="@string/prob2Menu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/prob4Menu"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/prob1Menu"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:id="@+id/prob2Menu"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/bg_round"
        />

    <Button
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:text="@string/prob3Menu"
        app:layout_constraintTop_toTopOf="@+id/prob1Menu"
        app:layout_constraintBottom_toBottomOf="@id/prob5Menu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/prob4Menu"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:id="@+id/prob3Menu"
        android:background="@drawable/bg_round"
        />

    <Button
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:text="@string/prob4Menu"
        app:layout_constraintTop_toTopOf="@+id/prob2Menu"
        app:layout_constraintBottom_toBottomOf="@id/prob6Menu"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/prob3Menu"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:id="@+id/prob4Menu"
        android:background="@drawable/bg_round"
        />

    <Button
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:text="@string/prob5Menu"
        app:layout_constraintTop_toTopOf="@+id/prob3Menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/prob6Menu"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:id="@+id/prob5Menu"
        android:background="@drawable/bg_round"
        />

    <Button
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:text="@string/prob6Menu"
        app:layout_constraintTop_toTopOf="@+id/prob4Menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/prob5Menu"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:id="@+id/prob6Menu"
        android:background="@drawable/bg_round"
        />

</android.support.constraint.ConstraintLayout>